# TwitchIntegration

./: .gitignore  configs.json  main.py  pyproject.toml  readme.md  requirements.txt  send_to_7zip.cmd  send_to_requirements.txt.bat  setup.bat  setup.py
cogs_handler/: import_cog.py
core_cogs/: brower_stuff.py  jumpscares.py  minecraft.py  sound.py  wallpaper.py
fun/: __init__.py  brower_stuff.py  import_cog.py  jumpscares.py  minecraft.py  sound.py  wallpaper.py
helper_functions/: config_handler.py  enums.py  git_commands.py  key_commands.py  validation.py
